# stomper

./: .gitignore  .travis.yml  Cargo.toml  big.compressed  big.decompressed  readme.md  test.comp
collections/: Cargo.toml
collections/src/: hashmap.rs
documentation/: .travis.yml  huffman_stats.txt  lzw_stats.txt  maaritelma.md  testaus.md  toteutus.md
documentation/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko6.md
libstomper/: Cargo.toml
libstomper/src/: huffman.rs  lib.rs  lzw.rs
libstomper/src/huffman/: bitreader.rs  bitwriter.rs  mod.rs  node.rs
src/: args.rs  huffman.rs  lib.rs  lzw.rs  main.rs
stomper/: Cargo.toml
stomper/src/: lib.rs  main.rs
testfiles/: small2.txt
