[package]
description = "Library for stomper compression tool"
license = "MIT"
name = "libstomper"
version = "0.1.0"
authors = ["Santtu Lempinen <santtu.lempinen@helsinki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
collections = {path = "../collections"}

[dev-dependencies]
tempfile = "3"       

[package.metadata.docs.rs]
doc-args = [ "--no-deps" ]
