[package]
name = "stomper"
description = "Compression tool written in rust"
license = "MIT"
version = "0.2.0"
authors = ["Santtu Lempinen <santtu.lempinen@helsinki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"
libstomper = "0.2.0"

[package.metadata.docs.rs]
doc-args = [ "--no-deps", "--document-private-items" ]